--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,10 +43,10 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            bin/clapp-linux-x64
-            bin/clapp-linux-arm64
-            bin/clapp-windows-x64.exe
-            bin/clapp-darwin-x64
-            bin/clapp-darwin-arm64
+            bin/clapp-linux-x64.zip
+            bin/clapp-linux-arm64.zip
+            bin/clapp-windows-x64.zip
+            bin/clapp-darwin-x64.zip
+            bin/clapp-darwin-arm64.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
