--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/src/index.js"
+    },
+    "./testing": {
+      "types": "./dist/testing.d.ts",
+      "import": "./dist/src/testing.js"
     }
   },
   "module": "./dist/src/index.js",
