--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lint:fix": "bunx --bun eslint . --fix",
     "fresh": "bunx rimraf node_modules/ bun.lock && bun i",
     "changelog": "bunx changelogen --output CHANGELOG.md",
-    "prepublishOnly": "bun --bun run build && bun run compile:all",
+    "prepublishOnly": "bun --bun run build && bun run compile:all && bun run zip:all",
     "release": "bun run changelog && bunx bumpp package.json --all",
     "test": "bun test",
     "dev:docs": "bun --bun vitepress dev docs",
