--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@stacksjs/docs": "^0.70.23",
     "@stacksjs/eslint-config": "^4.10.2-beta.3",
+    "@stacksjs/gitit": "^0.2.0",
     "@types/bun": "^1.2.9",
     "bumpp": "^10.1.0",
     "bun-plugin-dtsx": "^0.21.9",
